# mcpscanner

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mcpry/: __init__.py
src/mcpscanner/: __init__.py
