[project]
name = "mcpscanner"
version = "0.3.1"
description = "A command-line tool for analyzing MCP servers."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Pangea", email = "support@pangea.cloud" }
]
requires-python = ">=3.11"
dependencies = [
    "cyclopts>=4.0.0",
    "fastembed>=0.7.3",
    "fastmcp>=2.13.0",
    "mcp>=1.19.0",
    "pangea-sdk>=6.8.0",
    "pydantic>=2.12.3",
    "pyjson5>=2.0.0",
    "rich>=14.2.0",
    "scipy>=1.16.2",
]

[dependency-groups]
dev = [
    "mypy==1.18.2",
    "ruff==0.14.2",
    "scipy-stubs==1.16.2.4",
]
gpu = [
    "fastembed-gpu>=0.7.3",
]

[project.scripts]
mcpscanner = "mcpscanner:app"

[build-system]
requires = ["uv_build==0.9.5"]
build-backend = "uv_build"

[tool.mypy]
plugins = ["pydantic.mypy"]
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
no_implicit_reexport = false
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",   # isort
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "UP",  # pyupgrade
]
flake8-type-checking.runtime-evaluated-base-classes = ["pydantic.BaseModel", "mcp.types.Tool"]
